Fix tagline wrapping on mobile

--- a/dev/custom_theme/css/styles.css
+++ b/dev/custom_theme/css/styles.css
@@ -212,7 +212,7 @@ h1#logo .title {
   margin-top: 20px;
 }
 h1#logo .tagline {
-  white-space: nowrap;
+  white-space: normal;
 }
 #head {
   background: #0d1117;
